Clean the code and add the new modals

--- a/src/wc-course-website/components/activities/index.html
+++ b/src/wc-course-website/components/activities/index.html
@@ -4,8 +4,7 @@
       List of activities
     </p>
     <ul class="menu-list">
-      <collapsible-menu>
-        <span slot="title">Lecture</span>
+      <collapsible-menu title="Lectures">
         <div data-list="lectures">
           <template data-element="single-lecture">
             <li>
@@ -14,8 +13,7 @@
           </template>
         </div>
       </collapsible-menu>
-      <collapsible-menu>
-        <span slot="title">Tutorials</span>
+      <collapsible-menu title="Tutorials">
         <div data-list="tutorials">
           <template data-element="single-tutorial">
             <li>
@@ -24,8 +22,7 @@
           </template>
         </div>
       </collapsible-menu>
-      <collapsible-menu>
-        <span slot="title">Assignments</span>
+      <collapsible-menu title="Assignments">
         <div data-list="assignments">
           <template data-element="single-assignment">
             <li>
@@ -51,7 +48,7 @@
     </p>
     <ul class="menu-list">
       <li>
-        <a href="/wc-course-website/lectures/index.html?new">
+        <a href="/wc-course-website/pages/lectures/index.html?new">
           <span class="icon is-small">
             <i class="fas fa-plus"/>
           </span>
@@ -59,7 +56,7 @@
         </a>
       </li>
       <li>
-        <a href="/wc-course-website/tutorials/index.html?new">
+        <a href="/wc-course-website/pages/tutorials/index.html?new">
           <span class="icon is-small">
             <i class="fas fa-plus"/>
           </span>
@@ -67,7 +64,7 @@
         </a>
       </li>
       <li>
-        <a href="/wc-course-website/assignments/index.html?new">
+        <a href="/wc-course-website/pages/assignments/index.html?new">
           <span class="icon is-small">
             <i class="fas fa-plus"/>
           </span>
