--- a/src/wc-course-website/components/collapsibleMenu/index.html
+++ b/src/wc-course-website/components/collapsibleMenu/index.html
@@ -1,16 +1,10 @@
 <template id="collapsible-menu">
   <li>
     <div class="is-flex">
-      <span style="flex: 1;">
-        <slot name="title"></slot>
-      </span>
+      <span style="flex: 1;" data-element="title"></span>
       <span class="icon is-medium" style="cursor: pointer;" data-element="icon-button">
-        <template data-element="opened">
-          <i class="fas fa-chevron-up"></i>
-        </template>
-        <template data-element="closed">
-          <i class="fas fa-chevron-down"></i>
-        </template>
+        <i class="fas fa-chevron-up" data-element="opened"></i>
+        <i class="fas fa-chevron-down" data-element="closed"></i>
       </span>
     </div>
     <ul style="overflow-y: hidden;" data-element="inner">
