--- a/src/wc-course-website/components/forums/index.html
+++ b/src/wc-course-website/components/forums/index.html
@@ -1,6 +1,5 @@
 <template id="forums-list">
-  <collapsible-content>
-    <span slot="title">Discussion boards</span>
+  <collapsible-content title="Discussion boards">
     <div data-element="forums">
       <template data-element="single-forum">
         <div>
