--- a/src/wc-course-website/components/assignments/index.html
+++ b/src/wc-course-website/components/assignments/index.html
@@ -1,6 +1,33 @@
 <template id="assignments-list">
-  <collapsible-content>
-    <span slot="title">Assignments</span>
+  <collapsible-content title="Assignments">
     <div data-element="assignments"></div>
   </collapsible-content>
+  <div class="modal" data-element="new-modal">
+    <div class="modal-background"></div>
+    <div class="modal-content">
+      <div class="box">
+        <form data-element="new-form">
+          <div class="field">
+            <label class="label">What is the name of your new assignment?</label>
+            <div class="control">
+              <input
+                class="input"
+                type="text"
+                placeholder="Name of the assignment"
+              />
+            </div>
+          </div>
+          <div class="field is-grouped">
+            <div class="control">
+              <button class="button is-link" type="submit">Submit</button>
+            </div>
+            <div class="control">
+              <button class="button is-link is-light" data-element="cancel-button" type="button">Cancel</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <button class="modal-close is-large" aria-label="close" data-element="close-button" type="button" />
+  </div>
 </template>
